@@ -88,7 +88,10 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(Collections.singletonList("*")); // 배포 시 도메인 명시
+        config.setAllowedOrigins(List.of(
+                "http://localhost:5173",
+                "https://thip-git-develop-thips-projects.vercel.app/"
+        )); // 배포 시 도메인 명시
         config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
         config.setAllowedHeaders(Collections.singletonList("*"));
         config.setAllowCredentials(true);
